--- a/Views/Admin/UserPermission.cshtml
+++ b/Views/Admin/UserPermission.cshtml
@@ -2,6 +2,7 @@
 @model Vendor_Indusuno.ViewModels.UserPermissionViewModel
 @{
     ViewBag.Title = "User Permission";
+    TempData["HRM"] = "active";
     TempData["UserPermission"] = "active";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
