--- a/Views/Admin/PRApproval.cshtml
+++ b/Views/Admin/PRApproval.cshtml
@@ -110,6 +110,7 @@
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().Price)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().Margin)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().LMRemarks)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().PORRemarks)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().POAssignTo)</th>
                                     <th>Edit</th>
                                 </tr>
@@ -117,39 +118,40 @@
                             <tbody>
                                 @foreach (var item in Model.PurchaseOrdersModelList)
                                 {
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
-                                    <td><a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.PONumber</a></td>
-                                    <td>
-                                        @Html.EncodedActionLink(item.POId, "PODetails", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Details", @target = "_blank" })
-                                    </td>
-                                    <td>
-                                        @Html.EncodedActionLink(item.VPONumber, "DownloadPO", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Download", @target = "_blank" })
-                                    </td>
-                                    @if (!string.IsNullOrEmpty(item.PIUpload))
-                                    {
-                                        <td><a href='~/Content/upload/popayment/@item.PIUpload' target="_blank">@item.VendorId</a></td>
-                                    }
-                                    else
-                                    {
-                                        <td>@Html.DisplayFor(modelItem => item.VendorId)</td>
-                                    }
-                                    <td>@Html.DisplayFor(modelItem => item.VendorPrice)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.Price)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.Margin)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.LMRemarks)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.POAssignTo)</td>
-                                    <td>
-                                        @if (Model.UserProfileModels.EmpType == "Administrator")
+                                    <tr>
+                                        <td></td>
+                                        <td></td>
+                                        <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
+                                        <td><a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.PONumber</a></td>
+                                        <td>
+                                            @Html.EncodedActionLink(item.POId, "PODetails", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Details", @target = "_blank" })
+                                        </td>
+                                        <td>
+                                            @Html.EncodedActionLink(item.VPONumber, "DownloadPO", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Download", @target = "_blank" })
+                                        </td>
+                                        @if (!string.IsNullOrEmpty(item.PIUpload))
                                         {
-                                            @Html.EncodedActionLink("<i class='fa fa-money'></i>", "PORequestPayment", "Admin",
-                                                new { id = item.VPONumber }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Payment" })
+                                            <td><a href='~/Content/upload/popayment/@item.PIUpload' target="_blank">@item.VendorId</a></td>
                                         }
-                                    </td>
-                                </tr>
+                                        else
+                                        {
+                                            <td>@Html.DisplayFor(modelItem => item.VendorId)</td>
+                                        }
+                                        <td>@Html.DisplayFor(modelItem => item.VendorPrice)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.Price)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.Margin)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.LMRemarks)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.PORRemarks)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.POAssignTo)</td>
+                                        <td>
+                                            @if (Model.UserProfileModels.EmpType == "Administrator")
+                                            {
+                                                @Html.EncodedActionLink("<i class='fa fa-money'></i>", "PORequestPayment", "Admin",
+                                                    new { id = item.VPONumber }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Payment" })
+                                            }
+                                        </td>
+                                    </tr>
                                 }
                             </tbody>
                         </table>
