--- a/Views/Admin/PaymentProcessing.cshtml
+++ b/Views/Admin/PaymentProcessing.cshtml
@@ -105,6 +105,7 @@
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().Margin)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().LMRemarks)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().POAssignTo)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().PORRemarks)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().Status)</th>
                                     <th>Payment</th>
                                 </tr>
@@ -147,6 +148,7 @@
                                     <td>@Html.DisplayFor(modelItem => item.Margin)</td>
                                     <td>@Html.DisplayFor(modelItem => item.LMRemarks)</td>
                                     <td>@Html.DisplayFor(modelItem => item.POAssignTo)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.PORRemarks)</td>
                                     <td>@Html.DisplayFor(modelItem => item.Status)</td>
                                     <td>
                                         @if (Model.UserProfileModels.EmpType == "Administrator")
