--- a/Views/Admin/VendorInfo.cshtml
+++ b/Views/Admin/VendorInfo.cshtml
@@ -2,6 +2,7 @@
 @model Vendor_Indusuno.ViewModels.VendorInfoViewModel
 @{
     ViewBag.Title = "Vendor Information";
+    TempData["Vendor"] = "active";
     TempData["VendorInfo"] = "active";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
