--- a/Views/Admin/ApproveProducts.cshtml
+++ b/Views/Admin/ApproveProducts.cshtml
@@ -12,7 +12,7 @@
     @{
         string actType = "Add";
         string actBtn = "Submit";
-        string pageTitle = Html.Raw(Html.PageTitle()) + "";
+        string pageTitle = Html.Raw(Html.PageGTitle()) + "";
     }
     <h1>
         @pageTitle
