--- a/Views/Admin/ApprovedVendor.cshtml
+++ b/Views/Admin/ApprovedVendor.cshtml
@@ -12,7 +12,7 @@
 	@{
 		string actType = "Add";
 		string actBtn = "Submit";
-		string pageTitle = Html.Raw(Html.PageTitle()) + "";
+		string pageTitle = Html.Raw(Html.PageGTitle()) + "";
 		if (!String.IsNullOrEmpty(Model.VendorInfoModels.Id))
 		{
 			actType = "Edit";
