--- a/Views/Admin/RequestPayment.cshtml
+++ b/Views/Admin/RequestPayment.cshtml
@@ -10,11 +10,10 @@
 <!-- Content Header (Page header) -->
 <section class="content-header">
     @{
-        string pageTitle = Html.Raw(Html.PageTitle()) + "";
+        string pageTitle = Html.Raw(Html.PageGTitle()) + "";
     }
     <h1>
-        @*@pageTitle*@
-        Request for Payment Approval
+        @pageTitle
         <small></small>
     </h1>
     <ol class="breadcrumb">
