--- a/Views/Admin/POPayment.cshtml
+++ b/Views/Admin/POPayment.cshtml
@@ -12,7 +12,7 @@
     @{
         string actType = "Add";
         string actBtn = "Submit";
-        string pageTitle = Html.Raw(Html.PageTitle()) + "";
+        string pageTitle = Html.Raw(Html.PageGTitle()) + "";
         if (!String.IsNullOrEmpty(Model.POPaymentModels.Id))
         {
             actType = "Edit";
@@ -20,8 +20,7 @@
         }
     }
     <h1>
-        @*@pageTitle*@
-        PO Payment
+        @pageTitle
         <small></small>
     </h1>
     <ol class="breadcrumb">
