--- a/Views/Admin/POSourced.cshtml
+++ b/Views/Admin/POSourced.cshtml
@@ -10,7 +10,7 @@
 <!-- Content Header (Page header) -->
 <section class="content-header">
     @{
-        string pageTitle = Html.Raw(Html.PageTitle()) + "";
+        string pageTitle = Html.Raw(Html.PageGTitle()) + "";
     }
     <h1>
         @pageTitle
