--- a/Views/Admin/RegisteredVendor.cshtml
+++ b/Views/Admin/RegisteredVendor.cshtml
@@ -12,7 +12,7 @@
     @{
         string actType = "Add";
         string actBtn = "Search";
-        string pageTitle = Html.Raw(Html.PageTitle()) + "";
+        string pageTitle = Html.Raw(Html.PageGTitle()) + "";
         if (!String.IsNullOrEmpty(Model.VendorInfoModels.Id))
         {
             actType = "Edit";
