--- a/Views/Admin/UserPermission.cshtml
+++ b/Views/Admin/UserPermission.cshtml
@@ -10,7 +10,7 @@
 <!-- Content Header (Page header) -->
 <section class="content-header">
     <h1>
-        @Html.Raw(Html.PageTitle())
+        @Html.Raw(Html.PageGTitle())
         <small></small>
     </h1>
     <ol class="breadcrumb">
