--- a/Views/Admin/VendorStocks.cshtml
+++ b/Views/Admin/VendorStocks.cshtml
@@ -14,7 +14,7 @@
     @{
         string actType = "Add";
         string actBtn = "Submit";
-        string pageTitle = Html.Raw(Html.PageTitle()) + "";
+        string pageTitle = Html.Raw(Html.PageGTitle()) + "";
         if (!String.IsNullOrEmpty(Model.VendorStockModels.Id))
         {
             actType = "Edit";
@@ -23,7 +23,6 @@
     }
     <h1>
         @pageTitle
-        @*Unit of Measure*@
         <small></small>
     </h1>
     <ol class="breadcrumb">
