--- a/Views/Admin/POBackstage.cshtml
+++ b/Views/Admin/POBackstage.cshtml
@@ -1,9 +1,9 @@
 ﻿@using Vendor_Indusuno.Extensions
-@model Vendor_Indusuno.ViewModels.PRApprovalViewModel
+@model Vendor_Indusuno.ViewModels.POBackstageViewModel
 @{
-    ViewBag.Title = "Payment Request for Approval";
-    TempData["Payment"] = "active";
-    TempData["PRApproval"] = "active";
+    ViewBag.Title = "PO Backstage";
+    TempData["HRM"] = "active";
+    TempData["POBackstage"] = "active";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
@@ -24,7 +24,7 @@
 </section>
 <!-- Main content -->
 <section class="content">
-    @using (Html.BeginForm("PRApproval", "Admin", FormMethod.Post, new { id = "form_advanced_validation", autocomplete = "off", enctype = "multipart/form-data" }))
+    @using (Html.BeginForm("POBackstage", "Admin", FormMethod.Post, new { id = "form_advanced_validation", autocomplete = "off", enctype = "multipart/form-data" }))
     {
         @Html.AntiForgeryToken()
         <!-- Main row -->
@@ -32,14 +32,35 @@
             <div class="col-lg-12">
                 <!-- Default box -->
                 <div class="box">
+                    <div class="box-header with-border">
+                        @if (Model.UserProfileModels.EmpType != "User")
+                        {
+                            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                                <div class="form-group">
+                                    @Html.LabelFor(m => m.PurOrdModels.BackStage, new { @class = "form-control-label" })
+                                    @Html.DropDownListFor(m => m.PurOrdModels.BackStage,
+                                new List<SelectListItem>
+                                   {
+                                        new SelectListItem{ Text="ASSIGN", Value = "I" },
+                                        new SelectListItem{ Text="SOURCED", Value = "A"  },
+                                        new SelectListItem{ Text="GENERATE", Value = "S" },
+                                        new SelectListItem{ Text="PO for Approval", Value = "G" },
+                                        new SelectListItem{ Text="PO Approved", Value = "AP" },
+                                        new SelectListItem{ Text="PO Request Payment", Value = "RP" },
+                                        new SelectListItem{ Text="PR Approval", Value = "RPA" },
+                                   },
+                                 "--Select Backstage--", new { @class = "form-control select2 pobckstg" })
+                                    @Html.ValidationMessageFor(m => m.PurOrdModels.BackStage, "",
+                         new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            @*<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                                <a href="javascript:void(0)" class="btn bg-aqua m-t-20 pobackstage">Backstage</a>
+                            </div>*@
+                        }
+                    </div>
                     <!-- /.box-body -->
                     <div class="box-body">
-                        <div class="col-md-12">
-                            @if (Model.UserProfileModels.EmpType != "User")
-                            {
-                                <a href="javascript:void(0)" class="btn bg-aqua" id="prapprove">Approve</a>
-                            }
-                        </div>
                         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                             <div class="form-group">
                                 @Html.LabelFor(m => m.Search, new { @class = "form-control-label" }) <sup>*</sup>
@@ -73,20 +94,6 @@
                                 })
                             </div>
                         </div>
-                        @*<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                                <div class="form-group">
-                                    @Html.LabelFor(m => m.Status, new { @class = "form-control-label" })
-                                    @Html.DropDownListFor(m => m.Status,
-                                   new List<SelectListItem>
-                                      {
-                                        new SelectListItem{ Text="Success", Value = "Success", Selected = true },
-                                        new SelectListItem{ Text="Pending", Value = "Pending" },
-                                      },
-                                    "--Select Status--", new { @class = "form-control select2" })
-                                    @Html.ValidationMessageFor(m => m.Status, "",
-                            new { @class = "text-danger" })
-                                </div>
-                            </div>*@
                         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                             <div class="box-tools pull-left">
                                 <button type="submit" name="search" class="btn bg-aqua" title="SEARCH"
@@ -95,65 +102,60 @@
                                 </button>
                             </div>
                         </div>
-                        <table id="tblPRApproval" class="table table-bordered display">
+                        <table id="tblpobackstage" class="table table-bordered display">
                             <thead>
                                 <tr>
                                     <th><input type="checkbox" id="seallasnpo" /></th>
                                     <th>SNo</th>
-                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().PReqDate)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().OrderDate)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().CustomerName)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().PONumber)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().POId)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().POPId)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().VPONumber)</th>
-                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().VendorId)</th>
-                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().VendorPrice)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().Product)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().Quantity)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().Unit)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().Price)</th>
-                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().Margin)</th>
-                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().LMRemarks)</th>
-                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().PORRemarks)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().Discount)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().TotalPrice)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().GST)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().CurrentStage)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().POCreatedBy)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().POAssignTo)</th>
-                                    <th>Edit</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 @foreach (var item in Model.PurchaseOrdersModelList)
                                 {
-                                    <tr>
-                                        <td></td>
-                                        <td></td>
-                                        <td>@Html.DisplayFor(modelItem => item.PReqDate)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
-                                        <td><a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.PONumber</a></td>
-                                        <td>
-                                            @Html.EncodedActionLink(item.POId, "PODetails", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Details", @target = "_blank" })
-                                        </td>
-                                        <td>
-                                            @Html.EncodedActionLink(item.VPONumber, "DownloadPO", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Download", @target = "_blank" })
-                                        </td>
-                                        @if (!string.IsNullOrEmpty(item.PIUpload))
-                                        {
-                                            <td><a href='~/Content/upload/popayment/@item.PIUpload' target="_blank">@item.VendorId</a></td>
-                                        }
-                                        else
-                                        {
-                                            <td>@Html.DisplayFor(modelItem => item.VendorId)</td>
-                                        }
-                                        <td>@Html.DisplayFor(modelItem => item.VendorPrice)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Price)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Margin)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.LMRemarks)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.PORRemarks)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.POAssignTo)</td>
-                                        <td>
-                                            @if (Model.UserProfileModels.EmpType != "User")
-                                            {
-                                                @Html.EncodedActionLink("<i class='fa fa-money'></i>", "PORequestPayment", "Admin",
-                                                    new { id = item.VPONumber }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Payment" })
-                                            }
-                                        </td>
-                                    </tr>
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
+                                    <td>
+                                        <a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.PONumber</a>
+                                    </td>
+                                    <td>
+                                        <a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.POId</a>
+                                    </td>
+                                    <td>@Html.DisplayFor(modelItem => item.POPId)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.VPONumber)</td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Product)<br>
+                                        Brand : @item.Brand<br>
+                                        Model : @item.ModelNo
+                                    </td>
+                                    <td>@Html.DisplayFor(modelItem => item.Quantity)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Unit)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Price)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Discount)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.TotalPrice)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.GST)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.CurrentStage)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.POCreatedBy)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.POAssignTo)</td>
+                                </tr>
                                 }
                             </tbody>
                         </table>
